fixed avatar overflow issue

--- a/src/components/styleElements/avatar/avatar.css
+++ b/src/components/styleElements/avatar/avatar.css
@@ -2,19 +2,20 @@
   margin-left: 200px;
   height: 5rem;
   width: 5rem;
-  border-radius: 1.2rem;
+  border-radius: 12px;
   background-color: var(--warm-900);
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .SvgCircle {
   position: absolute;
   z-index: 1;
-  height: 5.5rem;
-  width: 5.5rem;
+  height: 6rem;
+  width: 6rem;
 }
 
 .circleSmall {
